fix(slider): fixed excessing wrapping of labels (#5103)

--- a/src/patternfly/components/Slider/slider.scss
+++ b/src/patternfly/components/Slider/slider.scss
@@ -165,6 +165,7 @@
 .pf-c-slider__step-label {
   position: absolute;
   top: var(--pf-c-slider__step-label--Top);
+  word-break: normal;
   transform: translateX(var(--pf-c-slider__step-label--TranslateX));
 }
 
